--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,64 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 node_modules/
 /node_modules
+.pnpm
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
 /.pnp
 .pnp.js
 .yarn/install-state.gz
 
-# testing
-/coverage
-
-# next.js
+# Next.js build output (NEVER commit build artifacts)
 /.next/
 /out/
+/dist/
+.next/
+out/
+dist/
 
-# production
+# Production
 /build
 
-# misc
+# Testing
+/coverage
+.nyc_output
+
+# Environment variables (NEVER commit secrets!)
+.env
+.env.local
+.env*.local
+.env.production.local
+
+# IDE & Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+# Misc
 .DS_Store
 *.pem
+.turbo/
+.cache/
 
-# debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env.local
-.env*.local
-
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Public uploads (use cloud storage, not git)
+public/uploads/*
+!public/uploads/.gitkeep
